--- a/fossora.html
+++ b/fossora.html
@@ -20,8 +20,8 @@
 <!--------------------------insert project information below this line----------------------->
 
     <div id="description">
-        <p>Immersive virtual environment for fossora, the tenth studio album by Björk. A follow-up to Utopia (2017), fossora explores a fungal wonderland rich with mycelial networks, human entanglements, and thunderous basslines. In digital space, the album unfolds into a lush, dark landscape, siting excerpts; marginalia; and written commentary from Björk. </p>
-        <p>The site will be launch in stages — in step with the eponymous album's content — over the coming weeks. Built between NYC and Reykjavík in community with Björk, OLI Records, M/M Paris, and the creative team at Squarespace.</p>
+        <p>Immersive virtual environment for fossora, the critically acclaimed and Grammy-nominated studio album by Björk. A follow-up to Utopia (2017), fossora explores a fungal wonderland rich with mycelial networks, human entanglements, and thunderous basslines. In digital space, the album unfolds into a lush, dark landscape, siting excerpts; marginalia; and written commentary from Björk. </p>
+        <p>The site launched in stages — in step with the eponymous album's content — over several months. Built between NYC and Reykjavík in community with Björk, OLI Records, M/M Paris, and the creative team at Squarespace. Björk's team will continue to build out the site over the coming months.</p>
         <p>Album artwork and CGI: M/M Paris</a><br>
         Creative Directors: Satu Pelkonen, Ben Hughes<br>
         Producers: Sion Prys, Erica Kung<br>
