Lazyload blur-in effect r1

--- a/fossora.html
+++ b/fossora.html
@@ -34,36 +34,36 @@
         <img src="fossora/bjork-fossora-landing.jpg">
         <img src="fossora/bjork-ovule-24.jpg">
         <div class="subhead">b2. ancestress</div>
-            <img class="lozad" data-src="fossora/bjork-ancestress-30-mikki.jpg">
-            <img class="lozad" data-src="fossora/bjork-ancestress-3-mikki.jpg">
-            <img class="lozad" data-src="fossora/bjork-ancestress-9-mikki.jpg">
-            <img class="lozad" data-src="fossora/bjork-ancestress-10-mikki.jpg">
+            <img class="lozad lazyload" data-src="fossora/bjork-ancestress-30-mikki.jpg">
+            <img class="lozad lazyload" data-src="fossora/bjork-ancestress-3-mikki.jpg">
+            <img class="lozad lazyload" data-src="fossora/bjork-ancestress-9-mikki.jpg">
+            <img class="lozad lazyload" data-src="fossora/bjork-ancestress-10-mikki.jpg">
             <div class="diptych">
-                <img class="lozad" data-src="fossora/bjork-ancestress-12-mikki.jpg">  
-                <img class="lozad" data-src="fossora/bjork-ancestress-13-mikki.jpg">
+                <img class="lozad lazyload" data-src="fossora/bjork-ancestress-12-mikki.jpg">  
+                <img class="lozad lazyload" data-src="fossora/bjork-ancestress-13-mikki.jpg">
             </div>
-            <img class="lozad" data-src="fossora/bjork-ancestress-29-mikki.jpg">
+            <img class="lozad lazyload" data-src="fossora/bjork-ancestress-29-mikki.jpg">
         <div class="caption">Featuring stills from ancestress, directed by Andrew Thomas Huang and costumed by Pier Paolo Piccioli for Valentino.</div>
         <div class="subhead">a2. ovule</div>
-            <img class="lozad" data-src="fossora/bjork-ovule-2.jpg">  
-            <img class="lozad" data-src="fossora/bjork-ovule-9.jpg">
-            <img class="lozad" data-src="fossora/bjork-ovule-10.jpg">
-            <img class="lozad" data-src="fossora/bjork-ovule.jpg">  
+            <img class="lozad lazyload" data-src="fossora/bjork-ovule-2.jpg">  
+            <img class="lozad lazyload" data-src="fossora/bjork-ovule-9.jpg">
+            <img class="lozad lazyload" data-src="fossora/bjork-ovule-10.jpg">
+            <img class="lozad lazyload" data-src="fossora/bjork-ovule.jpg">  
             <div class="diptych">
-                <img class="lozad" data-src="fossora/bjork-ovule-6.jpg">  
-                <img class="lozad" data-src="fossora/bjork-ovule-8.jpg">
+                <img class="lozad lazyload" data-src="fossora/bjork-ovule-6.jpg">  
+                <img class="lozad lazyload" data-src="fossora/bjork-ovule-8.jpg">
             </div>
             <div class="diptych">
-                <img class="lozad" data-src="fossora/bjork-ovule-11.jpg">  
-                <img class="lozad" data-src="fossora/bjork-ovule-5.jpg">
+                <img class="lozad lazyload" data-src="fossora/bjork-ovule-11.jpg">  
+                <img class="lozad lazyload" data-src="fossora/bjork-ovule-5.jpg">
             </div>
-            <img class="lozad" data-src="fossora/bjork-ovule-4.jpg"> 
-            <img class="lozad" data-src="fossora/bjork-ovule-15.jpg"> 
+            <img class="lozad lazyload" data-src="fossora/bjork-ovule-4.jpg"> 
+            <img class="lozad lazyload" data-src="fossora/bjork-ovule-15.jpg"> 
         <div class="caption">Featuring stills from ovule, directed by Nick Knight and costumed by Alessandro Michele for Gucci.</div>
         <div class="subhead">a1. atopos </div>
-            <img class="lozad" data-src="fossora/bjork-ovule-19.jpg">
-            <img class="lozad" data-src="fossora/bjork-ovule-18.jpg">
-            <img class="lozad" data-src="fossora/bjork-ovule-16.jpg">
+            <img class="lozad lazyload" data-src="fossora/bjork-ovule-19.jpg">
+            <img class="lozad lazyload" data-src="fossora/bjork-ovule-18.jpg">
+            <img class="lozad lazyload" data-src="fossora/bjork-ovule-16.jpg">
         <div class="caption">Featuring stills from atopos, directed by Vidar Logi and costumed by Burberry.</div>
     </div>
        
