--- a/index.html
+++ b/index.html
@@ -57,73 +57,73 @@
 <div class="listing"  data-link="community.html">
     <div class="info"><span class="title"><i>A Community is a Garden</i></span>
     <br><span class="description">The Guggenheim Museum</span></div>
-    <div class="images"><img class="lozad" data-src="community/contents-thumbnail.jpg"><img class="lozad" data-src="community/cover-thumbnail.jpg"></div>
+    <div class="images"><img class="lozad lazyload" data-src="community/contents-thumbnail.jpg"><img class="lozad lazyload" data-src="community/cover-thumbnail.jpg"></div>
 </div>
 
 <div class="listing" data-link="leren.html">
     <div class="info"><span class="title">Site + Identity</span>
     <br><span class="description">Le Ren</span></div>
-    <div class="images"><img class="lozad" data-src="leren/wordmark-thumbnail.png"><img class="lozad" data-src="leren/leren-thumbnail.gif"></div>
+    <div class="images"><img class="lozad lazyload" data-src="leren/wordmark-thumbnail.png"><img class="lozad lazyload" data-src="leren/leren-thumbnail.gif"></div>
 </div> 
 
 <div class="listing" data-link="nytimes.html">
     <div class="info"><span class="title">Design and AD</span>
     <br><span class="description">The New York Times</span></div>
-    <div class="images"><img class="lozad" data-src="nytimes/nyt15-thumbnail.png"><img class="lozad" data-src="nytimes/powell-thumbnail.png"></div>
+    <div class="images"><img class="lozad lazyload" data-src="nytimes/nyt15-thumbnail.png"><img class="lozad lazyload" data-src="nytimes/powell-thumbnail.png"></div>
 </div> 
 
 <div class="listing" data-link="spaceopera.html">
     <div class="info"><span class="title">Space Opera</span>
     <br><span class="description">Baffler Magazine No. 61</span></div>
-    <div class="images"><img class="lozad" data-src="spaceopera/spaceopera1-thumbnail.jpeg"><img class="lozad" data-src="spaceopera/spaceopera2-thumbnail.jpeg"></div>
+    <div class="images"><img class="lozad lazyload" data-src="spaceopera/spaceopera1-thumbnail.jpeg"><img class="lozad lazyload" data-src="spaceopera/spaceopera2-thumbnail.jpeg"></div>
 </div>
 
 <div class="listing" data-link="transientgrounds.html">
     <div class="info"><span class="title"></i>Transient Grounds</i></span>
     <br><span class="description">ACOMPI x NARS Foundation</span></div>
-    <div class="images"><img class="lozad" data-src="transientgrounds/subwayposter1-thumbnail.png"><img class="lozad" data-src="transientgrounds/subwayposter2-thumbnail.png"></div>
+    <div class="images"><img class="lozad lazyload" data-src="transientgrounds/subwayposter1-thumbnail.png"><img class="lozad lazyload" data-src="transientgrounds/subwayposter2-thumbnail.png"></div>
 </div>
 
 <div class="listing" data-link="cyberotica.html">
     <div class="info"><span class="title"></i>Cyberotica</i></span>
     <br><span class="description">Editorial Design</span></div>
-    <div class="images"><img class="lozad" data-src="cyberotica/radicallove-thumbnail.jpg"><img class="lozad" data-src="cyberotica/index-thumbnail.jpg"></div>
+    <div class="images"><img class="lozad lazyload" data-src="cyberotica/radicallove-thumbnail.jpg"><img class="lozad lazyload" data-src="cyberotica/index-thumbnail.jpg"></div>
 </div>
 
 <div class="listing" data-link="joshualeifer.html">
     <div class="info"><span class="title">Portfolio</span>
     <br> <span class="description">Joshua Leifer</span></div>
-    <div class="images"><img class="lozad" data-src="joshualeifer/jleifer1-thumbnail.png"><img class="lozad" data-src="joshualeifer/joshualeifer-thumbnail.gif"></div>   
+    <div class="images"><img class="lozad lazyload" data-src="joshualeifer/jleifer1-thumbnail.png"><img class="lozad lazyload" data-src="joshualeifer/joshualeifer-thumbnail.gif"></div>   
 </div>
 
 <div class="listing" data-link="mariovoid.html">
     <div class="info"><span class="title">Super Mario Void</span>
         <br> <span class="description">Web design and development</span></div>
-        <div class="images"><img class="lozad" data-src="mariovoid/thumbnail-thumbnail.png"><img class="lozad" data-src="mariovoid/gameover-thumbnail.png"></div>
+        <div class="images"><img class="lozad lazyload" data-src="mariovoid/thumbnail-thumbnail.png"><img class="lozad lazyload" data-src="mariovoid/gameover-thumbnail.png"></div>
 </div>
 
 <div class="listing" data-link="sober21.html">
     <div class="info"><span class="title"></i>Sober 21</i></span>
     <br><span class="description">The Creative Independent</span></div>
-    <div class="images"><img class="lozad" data-src="sober21/IMG_6556-thumbnail.jpg"><img class="lozad" data-src="sober21/IMG_6445-thumbnail.jpg"></div>
+    <div class="images"><img class="lozad lazyload" data-src="sober21/IMG_6556-thumbnail.jpg"><img class="lozad lazyload" data-src="sober21/IMG_6445-thumbnail.jpg"></div>
 </div>
 
 <div class="listing" data-link="reconnatypeface.html">
     <div class="info"><span class="title">Reconna</span>
     <br> <span class="description">Type Design</span></div>   
-    <div class="images"><img class="lozad" data-src="reconna/IMG_1237-thumbnail.jpg"><img class="lozad" data-src="reconna/IMG_1234-thumbnail.jpg"></div>
+    <div class="images"><img class="lozad lazyload" data-src="reconna/IMG_1237-thumbnail.jpg"><img class="lozad lazyload" data-src="reconna/IMG_1234-thumbnail.jpg"></div>
 </div>
 
 <div class="listing" data-link="reflections.html">
     <div class="info"><span class="title">Reflections on Practice</span>
     <br><span class="description">Editorial Design<br></span></div>
-    <div class="images"><img class="lozad" data-src="reflections/IMG_6544-thumbnail.jpg"><img class="lozad" data-src="reflections/IMG_6714-thumbnail.jpg"></div>
+    <div class="images"><img class="lozad lazyload" data-src="reflections/IMG_6544-thumbnail.jpg"><img class="lozad lazyload" data-src="reflections/IMG_6714-thumbnail.jpg"></div>
 </div>
 
 <div class="listing" data-link="postcursor.html">
     <div class="info"><span class="title">Postcursor / Starrynite</span>
     <br><span class="description">Machine learning, web development</span></div>
-    <div class="images"><img class="lozad" data-src="postcursor/postcursor-02-thumbnail.png"><img class="lozad" data-src="postcursor/postcursor-04-thumbnail.png"></div>
+    <div class="images"><img class="lozad lazyload" data-src="postcursor/postcursor-02-thumbnail.png"><img class="lozad lazyload" data-src="postcursor/postcursor-04-thumbnail.png"></div>
 </div>
 
 
