--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -23,16 +23,16 @@
     </div>
 
     <div id="gallery">
-        <img class="lozad" data-src="joshualeifer/jleifer1.png">
+        <img class="lozad lazyload" data-src="joshualeifer/jleifer1.png">
         <div class="caption">Joshua Leifer dotcom, 2020</div>
-        <img class="lozad" data-src="joshualeifer/jleifer-12.png">
+        <img class="lozad lazyload" data-src="joshualeifer/jleifer-12.png">
         <div class="diptych">
-            <img class="lozad" data-src="joshualeifer/jleifer-08.png">  
-            <img class="lozad" data-src="joshualeifer/jleifer-11.png">
+            <img class="lozad lazyload" data-src="joshualeifer/jleifer-08.png">  
+            <img class="lozad lazyload" data-src="joshualeifer/jleifer-11.png">
         </div>
         <div class="diptych">
-            <img class="lozad" data-src="joshualeifer/jleifer-10.png">  
-            <img class="lozad" data-src="joshualeifer/jleifer-07.png">
+            <img class="lozad lazyload" data-src="joshualeifer/jleifer-10.png">  
+            <img class="lozad lazyload" data-src="joshualeifer/jleifer-07.png">
         </div>
     </div>
        
