--- a/leren.html
+++ b/leren.html
@@ -26,16 +26,16 @@
 
     <div id="gallery">
         <img src="leren/leren.gif">
-        <img class="lozad" data-src="leren/leren_mobile.png">
+        <img class="lozad lazyload" data-src="leren/leren_mobile.png">
             <div class="caption">Site for Le Ren.<span class="citation">Cinematography by Ali Van Der Kruyk</span></div>
-            <img class="lozad" data-src="leren/wordmark-blackbg.png"> 
+            <img class="lozad lazyload" data-src="leren/wordmark-blackbg.png"> 
             <div class="diptych">
-                <img class="lozad" data-src="leren/wordmark-close2.png"> 
-                <img class="lozad" data-src="leren/wordmark-close1.png">
+                <img class="lozad lazyload" data-src="leren/wordmark-close2.png"> 
+                <img class="lozad lazyload" data-src="leren/wordmark-close1.png">
             </div>
             <div class="caption">Le Ren's wordmark is a custom redraw of Bellissima Script with a calligraphic lilt, modeled after vintage title cards.</div>
-            <img class="lozad" data-src="leren/leren2-coloralt.png"> 
-            <img class="lozad" data-src="leren/onscreen_footage.gif"> 
+            <img class="lozad lazyload" data-src="leren/leren2-coloralt.png"> 
+            <img class="lozad lazyload" data-src="leren/onscreen_footage.gif"> 
             <div class="caption">Excerpts from a digital flyer listing Le Ren's 2021 tour dates.<span class="citation">Cinematography by Ali Van Der Kruyk</span></div>
     </div>
        
