--- a/mariovoid.html
+++ b/mariovoid.html
@@ -28,10 +28,10 @@
     <div id="gallery">
         <img src="mariovoid/thumbnail.png">
         <div class="caption">Super Mario Void, 2019</div>
-        <img class="lozad" data-src="mariovoid/smv4.png">
-        <img class="lozad" data-src="mariovoid/smv1.png">
-        <img class="lozad" data-src="mariovoid/smv2.png">
-        <img class="lozad" data-src="mariovoid/smv3.png">
+        <img class="lozad lazyload" data-src="mariovoid/smv4.png">
+        <img class="lozad lazyload" data-src="mariovoid/smv1.png">
+        <img class="lozad lazyload" data-src="mariovoid/smv2.png">
+        <img class="lozad lazyload" data-src="mariovoid/smv3.png">
          </div>
        
          <div id="projfooter">
