--- a/postcursor.html
+++ b/postcursor.html
@@ -29,13 +29,13 @@
         <img src="postcursor/postcursor-01.png">
         <div class="caption"><i>Postcursor / Starrynite</i>, 2020.</div>
         <div class="diptych">
-            <img class="lozad" data-src="postcursor/postcursor-02.png">  
-            <img class="lozad" data-src="postcursor/postcursor-04.png">
+            <img class="lozad lazyload" data-src="postcursor/postcursor-02.png">  
+            <img class="lozad lazyload" data-src="postcursor/postcursor-04.png">
         </div>
-            <img class="lozad" data-src="postcursor/starrynite-03.png">  
+            <img class="lozad lazyload" data-src="postcursor/starrynite-03.png">  
         <div class="diptych">
-            <img class="lozad" data-src="postcursor/starrynite-04.png">  
-            <img class="lozad" data-src="postcursor/starrynite-05.png">
+            <img class="lozad lazyload" data-src="postcursor/starrynite-04.png">  
+            <img class="lozad lazyload" data-src="postcursor/starrynite-05.png">
         </div>
     </div>
        
