--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -32,10 +32,10 @@
     <div id="gallery">
         <img src="reconna/reconna screenie.png">
             <div class="caption">Reconna Typeface, 2019</div>
-        <img class="lozad" data-src="reconna/IMG_1271-2.jpg">
-        <img class="lozad" data-src="reconna/IMG_1247-2.jpg">
-        <img class="lozad" data-src="reconna/IMG_1234-2.jpg">
-        <img class="lozad" data-src="reconna/IMG_1237-2.jpg">
+        <img class="lozad lazyload" data-src="reconna/IMG_1271-2.jpg">
+        <img class="lozad lazyload" data-src="reconna/IMG_1247-2.jpg">
+        <img class="lozad lazyload" data-src="reconna/IMG_1234-2.jpg">
+        <img class="lozad lazyload" data-src="reconna/IMG_1237-2.jpg">
          </div>
        
          <div id="projfooter">
