--- a/reflections.html
+++ b/reflections.html
@@ -25,23 +25,23 @@
     <div id="gallery">
         <img src="reflections/IMG_6544-copy.jpg">
         <div class="caption"><i>Reflections on Practice</i>, 2019</div>
-        <img class="lozad" data-src="reflections/IMG_6714-copy.jpg">
+        <img class="lozad lazyload" data-src="reflections/IMG_6714-copy.jpg">
         <div class="diptych">
-            <img class="lozad" data-src="reflections/IMG_6642-copy.jpg">
-            <img class="lozad" data-src="reflections/IMG_6658-copy.jpg">
+            <img class="lozad lazyload" data-src="reflections/IMG_6642-copy.jpg">
+            <img class="lozad lazyload" data-src="reflections/IMG_6658-copy.jpg">
         </div>
         <div class="triptych">
-            <img class="lozad" data-src="reflections/IMG_6740-copy.jpg">
-            <img class="lozad" data-src="reflections/IMG_6595-copy.jpg">
-            <img class="lozad" data-src="reflections/IMG_6764-copy.jpg">
+            <img class="lozad lazyload" data-src="reflections/IMG_6740-copy.jpg">
+            <img class="lozad lazyload" data-src="reflections/IMG_6595-copy.jpg">
+            <img class="lozad lazyload" data-src="reflections/IMG_6764-copy.jpg">
         </div>
         <img class="lozad" data-src="reflections/IMG_6605-copy.jpg">
         <div class="diptych">
-            <img class="lozad" data-src="reflections/IMG_6785-copy.jpg">
-            <img class="lozad" data-src="reflections/IMG_6772.jpg">
+            <img class="lozad lazyload" data-src="reflections/IMG_6785-copy.jpg">
+            <img class="lozad lazyload" data-src="reflections/IMG_6772.jpg">
         </div>
-        <img class="lozad" data-src="reflections/IMG_6800-copy.jpg">
-        <img class="lozad" data-src="reflections/IMG_6576-copy.jpg">
+        <img class="lozad lazyload" data-src="reflections/IMG_6800-copy.jpg">
+        <img class="lozad lazyload" data-src="reflections/IMG_6576-copy.jpg">
          </div>
        
          <div id="projfooter">
