--- a/spaceopera.html
+++ b/spaceopera.html
@@ -22,7 +22,7 @@
 
     <div id="gallery">
         <img src="spaceopera/spaceopera1.jpeg"> 
-        <img class="lozad" data-src="spaceopera/spaceopera2.jpeg"> 
+        <img class="lozad lazyload" data-src="spaceopera/spaceopera2.jpeg"> 
     </div>
        
     <div id="projfooter">
