--- a/transientgrounds.html
+++ b/transientgrounds.html
@@ -26,10 +26,10 @@
     <div id="gallery">
         <img src="transientgrounds/subwayposter2.png">  
         <div class="caption">Poster for <i>Transient Grounds</i>, 2021</div>
-        <img class="lozad" data-src="transientgrounds/subwayposter1.png">
-        <img class="lozad" data-src="transientgrounds/poster.png">  
-            <img class="lozad" data-src="transientgrounds/banner.png">
-            <img class="lozad" data-src="transientgrounds/instagram.png">
+        <img class="lozad lazyload" data-src="transientgrounds/subwayposter1.png">
+        <img class="lozad lazyload" data-src="transientgrounds/poster.png">  
+            <img class="lozad lazyload" data-src="transientgrounds/banner.png">
+            <img class="lozad lazyload" data-src="transientgrounds/instagram.png">
     </div>
        
     <div id="projfooter">
