--- a/cyberotica.html
+++ b/cyberotica.html
@@ -24,36 +24,36 @@
 </div>
 
     <div id="gallery">
-        <img class="lozad" data-src="cyberotica/radicallove.jpg">  
+        <img class="lozad lazyload" data-src="cyberotica/radicallove.jpg">  
         <div class="caption"><i>Cyberotica: Technology and Fetish in Contemporary Art,</i> 2020</div>
-        <img class="lozad" data-src="cyberotica/factoryofthesun2.jpg">  
-            <img class="lozad" data-src="cyberotica/foreword.jpg">
+        <img class="lozad lazyload" data-src="cyberotica/factoryofthesun2.jpg">  
+            <img class="lozad lazyload" data-src="cyberotica/foreword.jpg">
         <div class="diptych">
-            <img class="lozad" data-src="cyberotica/abstract1.jpg">
-            <img class="lozad" data-src="cyberotica/contents2.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/abstract1.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/contents2.jpg">
         </div>
-            <img class="lozad" data-src="cyberotica/guiltymemory.jpg">
-            <img class="lozad" data-src="cyberotica/kentridge.jpg">
-            <img class="lozad" data-src="cyberotica/factoryofthesun.jpg"> 
+            <img class="lozad lazyload" data-src="cyberotica/guiltymemory.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/kentridge.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/factoryofthesun.jpg"> 
         <div class="polyptych">
-            <img class="lozad" data-src="cyberotica/zachblas.jpg">  
-            <img class="lozad" data-src="cyberotica/meatmetalcode2.jpg">
-            <img class="lozad" data-src="cyberotica/koolaidman1.jpg">
-            <img class="lozad" data-src="cyberotica/cybercinema.jpg">
-            <img class="lozad" data-src="cyberotica/gallianowang.jpg">
-            <img class="lozad" data-src="cyberotica/hownottobeseen.jpg">  
-            <img class="lozad" data-src="cyberotica/echoes.jpg">
-            <img class="lozad" data-src="cyberotica/cybeRoberta.jpg">  
-            <img class="lozad" data-src="cyberotica/cyberfeminism.jpg">
-            <img class="lozad" data-src="cyberotica/femmealien.jpg">  
-            <img class="lozad" data-src="cyberotica/chapter2head.jpg">
-            <img class="lozad" data-src="cyberotica/chapter2contents.jpg">  
+            <img class="lozad lazyload" data-src="cyberotica/zachblas.jpg">  
+            <img class="lozad lazyload" data-src="cyberotica/meatmetalcode2.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/koolaidman1.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/cybercinema.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/gallianowang.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/hownottobeseen.jpg">  
+            <img class="lozad lazyload" data-src="cyberotica/echoes.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/cybeRoberta.jpg">  
+            <img class="lozad lazyload" data-src="cyberotica/cyberfeminism.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/femmealien.jpg">  
+            <img class="lozad lazyload" data-src="cyberotica/chapter2head.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/chapter2contents.jpg">  
         </div>
         <div class="diptych">
-            <img class="lozad" data-src="cyberotica/coverscan2 copy.jpg">  
-            <img class="lozad" data-src="cyberotica/backcoverwspine copy.jpg">
+            <img class="lozad lazyload" data-src="cyberotica/coverscan2 copy.jpg">  
+            <img class="lozad lazyload" data-src="cyberotica/backcoverwspine copy.jpg">
         </div>
-        <img class="lozad" data-src="cyberotica/index.jpg">
+        <img class="lozad lazyload" data-src="cyberotica/index.jpg">
     </div>
        
     <div id="projfooter">
