--- a/mhns.html
+++ b/mhns.html
@@ -27,43 +27,43 @@
 
     <div id="gallery">
         <img src="mhns/mhns.png">
-            <img class="lozad" data-src="mhns/mhns4.png">
-            <img class="lozad" data-src="mhns/mhns3.png">
+            <img class="lozad lazyload" data-src="mhns/mhns4.png">
+            <img class="lozad lazyload" data-src="mhns/mhns3.png">
             <div class="caption">Web and social graphics for <i>Money Has No Smell</i>.<span class="citation">Typeset in Friz Quadrata Pro by Ernst Friz and Victor Caruso; and Radion A by General Type Studio.</span></div>
-            <img class="lozad" data-src="mhns/catgalog.gif">
+            <img class="lozad lazyload" data-src="mhns/catgalog.gif">
             <div class="diptych">
-                <img class="lozad" data-src="mhns/mhns5.png">
-                <img class="lozad" data-src="mhns/mhns13.png">  
+                <img class="lozad lazyload" data-src="mhns/mhns5.png">
+                <img class="lozad lazyload" data-src="mhns/mhns13.png">  
             </div>
             <div class="diptych">
-                <img class="lozad" data-src="mhns/mhns6.png">
-                <img class="lozad" data-src="mhns/mhns7.png">  
+                <img class="lozad lazyload" data-src="mhns/mhns6.png">
+                <img class="lozad lazyload" data-src="mhns/mhns7.png">  
             </div>
             <div class="diptych">
-                <img class="lozad" data-src="mhns/mhns16.png">
-                <img class="lozad" data-src="mhns/mhns12.png">  
+                <img class="lozad lazyload" data-src="mhns/mhns16.png">
+                <img class="lozad lazyload" data-src="mhns/mhns12.png">  
             </div>
             <div class="diptych">
-                <img class="lozad" data-src="mhns/mhns15.png">
-                <img class="lozad" data-src="mhns/mhns8.png">  
+                <img class="lozad lazyload" data-src="mhns/mhns15.png">
+                <img class="lozad lazyload" data-src="mhns/mhns8.png">  
             </div>
-            <img class="lozad" data-src="mhns/mhns20.png">
-            <img class="lozad" data-src="mhns/mhns18.png">
+            <img class="lozad lazyload" data-src="mhns/mhns20.png">
+            <img class="lozad lazyload" data-src="mhns/mhns18.png">
             <div class="caption">Exhibition Catalog for <i>Money Has No Smell</i><span class="citation">Typeset in Radion A by General Type Studio; printed by Conveyor Press</span></div>
             
-            <img class="lozad" data-src="mhns/jenica_heintzelman2.jpeg"></img>
+            <img class="lozad lazyload" data-src="mhns/jenica_heintzelman2.jpeg"></img>
             <div class="diptych">
-                <img class="lozad" data-src="mhns/jenica_heintzelman.jpeg">
-                <img class="lozad" data-src="mhns/jenica_heintzelman1.jpeg">  
+                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman.jpeg">
+                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman1.jpeg">  
             </div>
             <div class="caption">Exhibition graphics at the opening of <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
             <div class="diptych">
-                <img class="lozad" data-src="mhns/jenica_heintzelman-9568.jpg">
-                <img class="lozad" data-src="mhns/jenica_heintzelman-9698.jpg">  
+                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9568.jpg">
+                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9698.jpg">  
             </div>
             <div class="diptych">
-                <img class="lozad" data-src="mhns/jenica_heintzelman-9638.jpg">
-                <img class="lozad" data-src="mhns/jenica_heintzelman-9805.jpg">  
+                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9638.jpg">
+                <img class="lozad lazyload" data-src="mhns/jenica_heintzelman-9805.jpg">  
             </div>
             <div class="caption">Exhibition details from <i>Money Has No Smell</i><span class="citation">Photographs by Jenica Heintzelman</span></div>
     </div>
