--- a/spaceopera.html
+++ b/spaceopera.html
@@ -12,17 +12,23 @@
 <body>
     <section class="top sticky">
         <a class="name"></a>
-    <a class="projectTitle">Space Opera</a>
+    <a class="projectTitle">Illustration: The Baffler</a>
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
    <section id="project" style="display:none">
  
-    <div id="description"><p>Cover art for vol. 61 of <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>, an exploration of the cosmos and its discontents. The simple design collages found footage from the Apollo Missions.</p><p>Art direction by <a href="https://noideas.website/" target="_blank">No Ideas</a>.</p></div>
+    <div id="description"><p>Illustrations for <a href = "https://thebaffler.com/" target="_blank">The Baffler</a>. Initially created as competing directions for the same assignment, the two were published years apart in strikingly different contexts.</p>
+        <p>The cover for issue 61, <i>Space Opera</i>, features wide-angle stills of planet Earth as seen from space. Footage from the Apollo missions was combined simply, leaving room for interpretation: the result looks equal parts a flag of self-sovereignty, a diagrammatic close-up, or an abstract meditation on space.</p>
+        <p>In Issue 67, <i>The National Interest</i>, birds-eye landscapes come together to form a tapestry. The work accompanies an argument for global confederacy, using the EU as a model for a federation of republics.</p>
+    <p>Art direction by <a href="https://noideas.website/" target="_blank">No Ideas</p>.
+    </div>
 </div>
 
     <div id="gallery">
-        <img src="spaceopera/spaceopera1.jpeg"> 
-        <img class="lozad lazyload" data-src="spaceopera/spaceopera2.jpeg"> 
+        <img src="spaceopera/spaceopera1.png"> 
+        <div class="caption">Cover art for vol. 61, <i>Space Opera</i>. Footage from the Apollo Missions.</div>
+        <img class="lozad lazyload" data-src="spaceopera/spaceopera3.png"> 
+        <div class="caption">Illustration for 'Brussels or Bust', from vol. 67, <i>The National Interest</i>. Footage from Google Earth.</div>
     </div>
        
     <div id="projfooter">
