--- a/index.html
+++ b/index.html
@@ -15,46 +15,38 @@
 <div id="aboutContainer">
     <div id="about" style="display:none;">
         <a class="name indexname"></a>
-       <h3 class="p"><p>Mikki Janower is a multidisciplinary designer and researcher logging on from Brooklyn, NY. She's currently a brand designer at <a href="https://www.squarespace.com/" target="_blank">Squarespace</a>; and maintains an independent practice across media, music, and the arts. She has worked with The New York Times, the Guggenheim Museum, and Björk, among others.</h3>
-        <div class="contact">
-            <div class="links"><a href="mailto:info@mikki.studio" target="_blank">Email</a><br></a><a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a><br><a href="https://twitter.com/mikkijanower" target="_blank"> Twitter</a><br><a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a></div>
-            <div id="opencv">More info  + </div>
-        </div>
+       <h3 class="p"><p>Mikki Janower is a multidisciplinary designer and researcher logging on from Brooklyn, NY. She's currently a brand designer at <a href="https://www.squarespace.com/" target="_blank">Squarespace</a>; and maintains an independent practice across media, music, and the arts.</h3>
        <div class = "cv">
-            <div class="cv-item clients">
+         <div class="contact cv-item">
+            <div class="links">
+                <!--<p style="opacity:.5">Contact</p>-->
+                <a href="mailto:info@mikki.studio" target="_blank">Email</a><br><a href="https://www.instagram.com/_miikki/" target="_blank"> Instagram</a><br><a href="https://www.are.na/mikki-janower" target="_blank"> Are.na</a><a href="assets/Mikki Janower CV.pdf" target="_blank">CV</a></div>
+        </div>
+     <!--     <div class="cv-item clients">
                 <p style="opacity:.5; margin-bottom:4px;">Select Clients</p>
                 <a href="https://nytimes.com" target="_blank">The New York Times</a><br>
                 <a href="https://bjork.com" target="_blank">Björk</a><br>
                 <a href="https://guggenheim.org" target="_blank">The Guggenheim</a><br>
                 <a href="https://thebaffler.com" target="_blank">The Baffler</a><br>
                 <a href="https://princeton.edu" target="_blank">Princeton University</a><br>
+            </div>
+            <div class="cv-item clients">
+                <p style="opacity:0; margin-bottom:4px;">Select Clients</p>
                 <a href="https://cueartfoundation.org" target="_blank">CUE Art Foundation</a><br>
                 <a href="https://nike.com" target="_blank">Nike</a><br>
                 <a href="https://kickstarter.com" target="_blank">Kickstarter</a><br>
                 <a href="https://thecreativeindependent.com" target="_blank">The Creative Independent</a><br>
                 <a href="https://acompi.nyc" target="_blank">ACOMPI</a><br>
             </div>
+
             <div class="cv-item awards">
                 <p style="opacity:.5; margin-bottom:4px;">Awards</p>
-                    <p><a href="" target="_blank">102nd ADC Awards, 2023</a><br>
+                    <p><a href="" target="_blank">Art Director's Club Awards, 2023</a><br>
                     <a href="https://winners.webbyawards.com/2023/advertising-media-pr/individual/social-video/239173/squarespace-icons-01-bjrk" target="_blank">Webby Awards, 2023</a><br>
                     <a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">The Design Kids, 2020</a><br>
-                    <div class="features">
-                        <p style="opacity:.5; margin-bottom:4px;">Features</p>
-                        <a href="https://readymag.com/u1881633060/2361167/" target="_blank">Guggenheim: Sustainable Futures, 2021</a><br>
-                        <a href="https://www.are.na/block/1808034" target="_blank">Common Fields: Tools for Collaboration, 2021</a><br>
-                        <a href="https://www.newartdealers.org/programs/nada-miami-2022/presentations/616" target="_blank">Embajada at NADA Miami, 2022</a><br>
-                        <p>Sam Fox Alumni Spotlight, 2021</p>
-                        <p>Circle Live: Design Trends, 2023</p>
                 </div>
         </div>
-            <div class="cv-item writing">
-                <p style="opacity:.5; margin-bottom:4px;">Writing</p>
-                <a href="https://thecreativeindependent.com/people/curatorial-duo-acompi-on-the-power-of-building-something-with-friends/" target="_blank">TCI: ACOMPI on the Power of Building Something with Friends</a><br>
-                <a href="https://thecreativeindependent.com/people/worker-owned-studio-partners-and-partners-on-building-tools-for-better-worlds/" target="_blank">TCI: Partner & Partners on Building Tools for Better Worlds</a></p>
-                <a href="chrome-extension://efaidnbmnnnibpcajpcglclefindmkaj/https://arena-attachments.s3.amazonaws.com/9400568/b17b697286cc21f202f2f8458bdbc35b.pdf?1604622316" target="_blank">A Community is a Garden</a>
-            </div>
-    </div>
+    </div>-->
 </div>
 </div>
 
